--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="application-name" content="custom-data-quality-report">
-  <meta name="description" content="Custom Data Quality Report">
-  <meta name="author" content="Bernhard Landsberg <pbernhard.landsberg@leanix.net>">
+  <meta name="description" content="Customer Factsheet Overview">
+  <meta name="author" content="Bernhard Landsberg <bernhard.landsberg@leanix.net>">
 
   <title>Custom Data Quality Report</title>
 
