--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Customer Factsheet Overview">
   <meta name="author" content="Bernhard Landsberg <bernhard.landsberg@leanix.net>">
 
-  <title>Custom Data Quality Report</title>
+  <title>Customer Factsheet Overview</title>
 
   <!--
     If you don't want to bundle your css files with webpack
